<resources>
    <string name="app_name">Volunteer Attendance System Android</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_attendance">Attendance</string>
    <string name="title_admin">Administrator</string>
    <string name="title_profile">Profile</string>
    <string name="timer_started_at">Started at</string>
    <string name="timer_hrs">MIN(S)</string>
    <string name="checkin_button_title">Check-In</string>
    <string name="checkout_button_title">Check-Out</string>
    <string name="assigned_school">YOUR ASSIGNED SCHOOL</string>
    <string name="assigned_meeting">YOUR MEETING INFORMATION</string>
    <string name="meeting_day">Meet every</string>
    <string name="sign_in">Sign In Time:</string>
    <string name="sign_out">Sign Out Time:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
