<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.GCI.attendancesystem.home.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_attendance"
        android:name="com.GCI.attendancesystem.attendance.AttendanceFragment"
        android:label="@string/title_attendance"
        tools:layout="@layout/fragment_attendance" />

    <fragment
        android:id="@+id/navigation_admin"
        android:name="com.GCI.attendancesystem.admin.AdminFragment"
        android:label="@string/title_admin"
        tools:layout="@layout/fragment_admin" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.GCI.attendancesystem.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>