<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/checkout_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:layout_marginHorizontal="@dimen/default_padding"
    android:layout_marginTop="@dimen/default_padding"
    app:cardCornerRadius="@dimen/default_corner_radius"
    app:cardElevation="@dimen/default_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_started_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/timer_started_at"
                android:textColor="@android:color/primary_text_light"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_time_started"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="0:00 PM"
                android:textColor="@android:color/primary_text_light"
                android:textSize="20sp" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_location_at"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="At"
                android:textColor="@android:color/primary_text_light"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="School Name"
                android:textColor="@android:color/primary_text_light"
                android:textSize="20sp" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Chronometer
                android:id="@+id/tv_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:format="hh:mm"
                android:textColor="@android:color/primary_text_light"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_hrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer_hrs"
                android:textColor="@android:color/primary_text_light"
                android:textSize="30sp" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/checkout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:padding="@dimen/default_padding"
            android:text="@string/checkout_button_title"
            android:textColor="#FFFFFF"
            android:background="@drawable/btn_rounded"
            app:spinning_bar_width="4dp"
            app:spinning_bar_color="@color/white"
            app:spinning_bar_padding="6dp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>